// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with bars 1`] = `
<MapView
  initialRegion={
    Object {
      "latitude": 59.329323,
      "latitudeDelta": 0.0922,
      "longitude": 18.06858,
      "longitudeDelta": 0.0421,
    }
  }
  showsMyLocationButton={false}
  showsUserLocation={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <BarMarkerContainer
    bar={
      Object {
        "default_category": "Beer under 30",
        "post_address": "Norrtullsgatan 11",
        "post_author": 1,
        "post_category": "Beer under 30",
        "post_city": "Stockholm",
        "post_content": "Serves chilled Norrlands Guld on tap for only 29:-.One of the most best places in town for cheap beer lovers.",
        "post_country": "Sweden",
        "post_id": 38,
        "post_latitude": 59.3419634,
        "post_longitude": 18.051719899999966,
        "post_region": "Stockholm County",
        "post_status": "publish",
        "post_title": "MacLarens",
        "post_type": "gd_place",
        "post_zip": "113 29",
      }
    }
  />
  <BarMarkerContainer
    bar={
      Object {
        "default_category": "Beer under 30",
        "post_address": "Sveavägen 39 Stockholm",
        "post_author": 1,
        "post_category": "Beer under 50",
        "post_city": "Stockholm",
        "post_content": "The famous Lion Bar chain is a perfect find for bargain brew lovers! 7 Places all around Stockholm serve chilled Spendrups (40cl, tapped) for 23:- until 20h. After this the prices will increase in two steps: until midnight the price will be 36:-, thereafter 40:-. Go and get there early to get yourself a crispy brew for under 30:- !",
        "post_country": "Sweden",
        "post_id": 39,
        "post_latitude": 59.3404626,
        "post_longitude": 18.05888660000005,
        "post_region": "Stockholm County",
        "post_status": "publish",
        "post_title": "Lion Bar Sveavägen 39",
        "post_type": "gd_place",
      }
    }
  />
  <WalkingDirections />
</MapView>
`;

exports[`renders without bars 1`] = `
<MapView
  initialRegion={
    Object {
      "latitude": 59.329323,
      "latitudeDelta": 0.0922,
      "longitude": 18.06858,
      "longitudeDelta": 0.0421,
    }
  }
  showsMyLocationButton={false}
  showsUserLocation={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <WalkingDirections />
</MapView>
`;
